// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerifiedHumanBadge > compact variant > matches snapshot 1`] = `
<span
  aria-label="World ID Verified Human"
  class="inline-flex items-center text-muted-foreground"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shield-check h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
    />
    <path
      d="m9 12 2 2 4-4"
    />
  </svg>
  <span
    class="sr-only"
  >
    badge.verified_human
  </span>
</span>
`;

exports[`VerifiedHumanBadge > full variant (default) > matches snapshot 1`] = `
<span
  class="inline-flex items-center gap-1 text-xs text-muted-foreground"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shield-check h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
    />
    <path
      d="m9 12 2 2 4-4"
    />
  </svg>
  <span>
    badge.verified_human
  </span>
</span>
`;
